# TrafficVizNodes

./: .gitignore  ARCHITECTURE.md  Dockerfile.camera  Dockerfile.camera.gpu  Dockerfile.inference  Dockerfile.server  Makefile  README.md  TODO.md  benchmark.py  docker-compose.yml  dry_run.sh  pyproject.toml  reid_test_results-v0.json  run_all.py
camera_node/: attributes.py  config.py  detector.py  main.py  publisher.py  reid.py  streamer.py  tracker.py
camera_node/dmt_backbones/: __init__.py  densenet_ibn.py  pooling.py  resnest.py  resnet_ibn_a.py  se_resnet_ibn_a.py  vit_pytorch.py
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/.next/: app-build-manifest.json  build-manifest.json  trace
inference_node/: __init__.py  api.py  config.py  frame_extractor.py  main.py  rag_pipeline.py  vector_store.py  vlm_reranker.py
inference_node/retrieval/: __init__.py  query_parser.py  search.py  vector_store.py
inference_node/vqa/: __init__.py  base.py  factory.py  florence.py  qwen.py  types.py
reid/: __init__.py  pipeline.py  registry.py  ui.py  utils.py
reid-dmt-backbone/: cleaned_reid.json  reid_ensemble_pipeline.py  reid_pipeline.py  reid_pipeline_base.py  reid_ui.py  run_reid_test.py  verify.py
reid/inference/: __init__.py  config.py  ensemble.py  extractor.py  loader.py  model_factory.py  preprocessing.py  utils.py
reid/model/: make_model.py
reid/postprocessing/: __init__.py  base.py  pipeline.py
reid/stages/: __init__.py  base.py  buffer.py  detection.py  feature_production.py  live_feeder.py  offline_registry.py  sampler.py  tracking.py  video_feeder.py
reid_server/: api.py  config.py  crop_extractor.py  event_store.py  global_registry.py  indexer.py  main.py  matcher.py  subscriber.py
scripts/: compare_reid_embeddings.py  demo_interactive_retrieval.py  dry_run_inference.py  extract_reid_crops.py  match_multicamera.py  populate_vector_db.py  prepopulate_db.py  query_db.py  query_vector_db.py  render_tracks.py  run_pipeline_tracking.py  run_reid_pipeline.py  run_yolo_tracking.py
shared/: schemas.py  utils.py
tests/: test_enhanced_tracking.py
tracking/: __init__.py
(+89 files in other folders)
