[project]
name = "cctv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.0.0",
    "efficientnet-pytorch>=0.7.1",
    "einops",
    "fastapi>=0.128.8",
    "lapx>=0.9.4",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.13.3",
    "pyzmq>=27.1.0",
    "qwen-vl-utils>=0.0.14",
    "rfconv>=0.0.2b20210406",
    "scipy>=1.13.1",
    "timm>=1.0.27",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.6",
    "ultralytics>=8.4.45",
    "uvicorn>=0.39.0",
    "yacs>=0.1.8",
]
