[project]
name = "cctv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "chromadb>=1.0.0",
    "efficientnet-pytorch>=0.7.1",
    "einops",
    "fastapi>=0.128.8",
    "lapx>=0.9.4",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.13.3",
    "pyzmq>=27.1.0",
    "qwen-vl-utils>=0.0.14",
    "rfconv>=0.0.2b20210406",
    "scipy>=1.13.1",
    "timm>=1.0.27",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.6",
    "ultralytics>=8.4.45",
    "uvicorn>=0.39.0",
    "yacs>=0.1.8",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0"
ruff = "^0.12"
mypy = "^1.16"
pre-commit = "^4.2"
types-pyyaml = "^6.0.12.20260518"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

